samples/_failures_safe/1761399642_6aea98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27a07cb2.c: In function ‘main’:
./samples/SAFE/__tmp_27a07cb2.c:153:21: error: expected declaration or statement at end of input
  153 |                     printf("Matrix addition successful:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_27a07cb2.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27a07cb2.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27a07cb2.c:153:21: error: expected declaration or statement at end of input
